--- a/python/Django/tango_with_django_project/templates/rango/index.html
+++ b/python/Django/tango_with_django_project/templates/rango/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+{% load static %}
 <html>
 <head>
   <title>Rango</title>
@@ -7,5 +8,6 @@
   <h1>Rango says...</h1>
   Hello world! <strong>{{boldmessage}}</strong><br />
   <a href="/rango/about">About</a><br/>
+  <img src="{% static 'd.jpg' %}" alt="Destroyer" width="300px"/>
 </body>
 </html>
