django tango with django chapter 4
Adding static media, adding possibility to upload files

--- a/python/Django/tango_with_django_project/templates/rango/index.html
+++ b/python/Django/tango_with_django_project/templates/rango/index.html
@@ -8,6 +8,7 @@
   <h1>Rango says...</h1>
   Hello world! <strong>{{boldmessage}}</strong><br />
   <a href="/rango/about">About</a><br/>
+  <a href="/rango/chapter4/">Check chapter 4 result</a></br>
   <img src="{% static 'd.jpg' %}" alt="Destroyer" width="300px"/>
 </body>
 </html>
