--- a/js/nodejs/express/nodetest2/views/index.jade
+++ b/js/nodejs/express/nodetest2/views/index.jade
@@ -2,4 +2,35 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to our test
+
+  // wrapper
+  #wrapper
+    // user info
+    #userInfo
+      h2 User Info
+      p
+        strong Name:&nbsp;
+        span(id="userInfoName")
+        br
+        strong Age:&nbsp;
+        span(id="userInfoAge")
+        br
+        strong Gender:&nbsp;
+        span(id="userInfoGender")
+        br
+        strong Location:&nbsp;
+        span(id="userInfoLocation")
+        br
+
+    // user list
+    h2 User List
+    #userList
+      table
+        thead
+          th User name
+          th Email
+          th Delete?
+        tbody
+    // /user list
+  // /wrapper
