--- a/js/nodejs/express/nodetest2/views/index.jade
+++ b/js/nodejs/express/nodetest2/views/index.jade
@@ -33,4 +33,19 @@ block content
           th Delete?
         tbody
     // /user list
+    h2 Add user
+    #addUser
+      fieldset
+        input#inputUserName(type='text', placeholder='Username')
+        input#inputUserEmail(type='text', placeholder='Email')
+        br
+        input#inputUserFullName(type='text', placeholder='Full Name')
+        input#inputUserAge(type='text', placeholder='Age')
+        br
+        input#inputUserLocation(type='text', placeholder='Location')
+        input#inputUserGender(type='text', placeholder='gender')
+        br
+        button#btnAddUser Add user
+    // /addUser
+
   // /wrapper
