--- a/js/nodejs/express/nodetest2/views/layout.jade
+++ b/js/nodejs/express/nodetest2/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    a#xd(href='#') Test link
     block content
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
     script(src='/javascripts/global.js')
