after the game is won cells are highlighted

--- a/js/react/my-app/src/index.css
+++ b/js/react/my-app/src/index.css
@@ -32,6 +32,11 @@ ol, ul {
   width: 34px;
 }
 
+.square.winning {
+  background-color: red;
+  color: white;
+}
+
 .square:focus {
   outline: none;
 }
